# mcp-server-rust-template

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile.toml  QUICKSTART.md  README.md  TEMPLATE_CONFIG.md  cargo-generate.toml  install.sh  pnpm-lock.yaml  post-script.rhai  pre-script.rhai  wrangler.toml
.github/workflows/: build.yml
examples/: test_mcp_client.sh
src/: lib.rs
src/tools/: example_calculator.rs  mod.rs
tests/: integration_test.rs  transport_test.rs
