[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
authors = ["{{author_name}} <{{author_email}}>"]
description = "{{server_description}}"
repository = "https://github.com/{{github_username}}/{{project-name}}"
license = "MIT"
keywords = ["mcp", "model-context-protocol", "cloudflare-workers"]
categories = ["web-programming"]

[dependencies]
worker = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "*", features = ["js"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"
